# databuildcheck

./: .gitignore  LICENSE.txt  example_manifest.json  example_requirements.yaml  pyproject.toml  sample_config.yaml  test_patch_path_fix.py
databuildcheck/: README.md  example_manifest.json  pyproject.toml
databuildcheck/example_sql/models/: users.sql  users_with_extra_cte_columns.sql
databuildcheck/src/databuildcheck/: __about__.py  __init__.py  cli.py  manifest.py
databuildcheck/src/databuildcheck/checks/: __init__.py  manifest_requirements_check.py  sql_column_check.py  sql_table_check.py
databuildcheck/tests/: test_cli.py  test_manifest.py  test_manifest_requirements_check.py  test_sql_table_check.py
docs/: programming-guide.md
example_sql/models/: orders.sql  users.sql  users_union.sql
src/databuildcheck/: __init__.py  cli.py  manifest.py
src/databuildcheck/checks/: manifest_requirements_check.py
tests/: __init__.py  test_databuildcheck.py  test_manifest.py  test_sql_column_check.py  test_sql_table_check.py
